muitos para muitos

--- a/app/views/fornecedores/_fornecedor.html.erb
+++ b/app/views/fornecedores/_fornecedor.html.erb
@@ -1,5 +1,10 @@
 <div id="<%= dom_id fornecedor %>">
   <p>
+    <strong>Tipo:</strong>
+    <%= fornecedor.fornecedor_tipo&.nome %>
+  </p>
+
+  <p>
     <strong>Nome:</strong>
     <%= fornecedor.nome %>
   </p>
@@ -22,6 +27,10 @@
   <p>
     <strong>Soma:</strong>
     <%= somar_fornecedor(fornecedor) %>
+  </p>
+
+  <p>
+    <%= link_to "Cadastrar enderecos", fornecedor_fornecedores_enderecos_path(fornecedor) %>
   </p>
 
 </div>
